updated button types

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Anthony</span><br> Your Web Developer</h1>
 
-                    <a href="#mailto:anthonythefrontenddeveloper@gmail.com" class="button">Contact</a>
+                    <a href="#mailto:anthonythefrontenddeveloper@gmail.com" class="button" type="submit">Contact</a>
                 </div>
 
                 <div class="home__social">
@@ -231,11 +231,11 @@
                 <h2 class="section-title">Contact</h2>
 
                 <div class="contact__container bd-grid">
-                    <form action="https://formsubmit.comanthonythefrontenddeveloper@gmail.com" method="POST" enctype="multipart/form-data" name="EmailForm" class="contact__form">
+                    <form action="https://formsubmit.co/anthonythefrontenddeveloper@gmail.com" method="POST" enctype="multipart/form-data" name="EmailForm" class="contact__form">
                         <input type="text" placeholder="Name" class="contact__input">
-                        <input type="mail" placeholder="Email" class="contact__input">
+                        <input type="mail" placeholder="Email" class="contact__input" required>
                         <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
-                        <input type="button" value="Send" class="contact__button button">
+                        <input type="submit" value="Send" class="contact__button button">
                     </form>
                 </div>
             </section>
