made pictures clickable

--- a/index.html
+++ b/index.html
@@ -205,23 +205,23 @@
 
                 <div class="work__container bd-grid">
                     <div class="work__img">
-                        <img src="assets/img/Screenshot 2021-11-29 at 10-53-34 Not Another Horror Podcast.png" alt="">
+                        <a href="https://www.notanotherhorrorpodcast.com" target="blank"><img src="assets/img/Screenshot 2021-11-29 at 10-53-34 Not Another Horror Podcast.png" alt=""></a>
                     </div>
                     <div class="work__img">
-                        <img src="assets/img/Screenshot 2021-11-29 at 10-56-47 Responsive Halloween Website.png" alt="">
+                        <a href="https://anthonythedeveloper.github.io/halloweenwebsite/" target="blank"><img src="assets/img/Screenshot 2021-11-29 at 10-56-47 Responsive Halloween Website.png" alt=""></a>
                     </div>
                     <div class="work__img">
-                        <img src="assets/img/Screenshot 2021-11-29 at 10-59-32 Take Flight Teaching.png" alt="">
+                        <a href="https://anthonythedeveloper.github.io/takeflightteaching/" target="blank"><img src="assets/img/Screenshot 2021-11-29 at 10-59-32 Take Flight Teaching.png" alt=""></a>
                     </div>
                     <div class="work__img">
-                        <img src="assets/img/Screenshot 2021-11-29 at 11-53-10 Korean Culture Platform - Kworld Now.png" alt="Kworld Website">
+                        <a href="https://www.kworldnow.com" target="blank"><img src="assets/img/Screenshot 2021-11-29 at 11-53-10 Korean Culture Platform - Kworld Now.png" alt="Kworld Website"></a>
                     </div>
                     <!--
                     <div class="work__img">
                         <img src="assets/img/work5.jpg" alt="">
                     </div>
                     <div class="work__img">
-                        <img src="assets/img/work6.jpg" alt="">
+                        <img src="assets/img/work6.jpg" alt=">
                     </div> -->
                 </div>
             </section>
