--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Anthony</span><br> Your Web Developer</h1>
+                    <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Anthony</span><br> Your Web Developer</h1>
 
-                    <a href="#mailto:anthonythefrontenddeveloper@gmail.com" class="button" type="submit">Contact</a>
+                    <a href="mailto:anthonythefrontenddeveloper@gmail.com?subject=I'd Like To Work With You" class="button" type="submit">Contact</a>
                 </div>
 
                 <div class="home__social">
                     <a href="www.linkedin.com/in/anthonyjohnson32" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="" class="home__social-icon"><i class='bx bxl-behance' ></i></a>
+                    <!--<a href="" class="home__social-icon"><i class='bx bxl-behance' ></i></a>-->
                     <a href="https://github.com/anthonythedeveloper" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
 
@@ -65,7 +65,7 @@
                     </div>
                     
                     <div>
-                        <h2 class="about__subtitle">I'am Anthony</h2>
+                        <h2 class="about__subtitle">I'm Anthony</h2>
                         <p class="about__text">An E-commerce entrepreneur with four years of experience transitioning into the field of Web Development. Recent graduate with education and internship experience in web development. Highly poised and dedicated with talent in design principles and programming languages. Excellent eye for visual aesthetics paired with insight into data and backend functionality. Prioritizes usability and adaptability during all
                             projects. Designs sites and apps to attract users with aesthetically pleasing interfaces and exceptional UX elements. Comfortable working within large-scale collaborations or on individually-developed assets. Enjoys working using the Agile method. Firm grasp of analytics, data and user funnels.</p>           
                     </div>                                   
