Took away social media links (rebranding)

--- a/index.html
+++ b/index.html
@@ -245,11 +245,11 @@
         <footer class="footer">
             <p class="footer__title">Anthony</p>
             <p>Email: anthonythefrontenddeveloper@gmail.com</p>
-            <div class="footer__social">
+           <!--- <div class="footer__social">
                 <a href="#" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
                 <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
                 <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
-            </div>
+            </div> -->
             <p>&#169; 2021 copyright all right reserved</p>
         </footer>
 
